--- a/views/chequeo/categorias.pug
+++ b/views/chequeo/categorias.pug
@@ -53,10 +53,11 @@ block content
                   md-icon(md-svg-src="/static/content/icons/sort{{ $cCtrl.reverse ? 'Desc' : 'Asc' }}.svg" ng-show="$cCtrl.propertyName === 'estado'")
               
               th(scope='col' ) Fecha de creación
+              th(scope='col' ) Usuario que Crea
               th(scope='col' ) Acciones
           tfoot
             tr
-              td.text-right(colspan='4')
+              td.text-right(colspan='5')
                 div(layout="row" layout-xs="column" layout-align="end center")
                   span Mostrando &nbsp; 
                   md-select(placeholder='' ng-model='$cCtrl.registrosXpagina' ng-change="$cCtrl.pagina = 0;$cCtrl.paginar()")
@@ -71,9 +72,10 @@ block content
           tbody
             tr(ng-repeat="item in $cCtrl.categoriasFiltrados | limitTo : $cCtrl.registrosXpagina : ($cCtrl.registrosXpagina*$cCtrl.pagina) | orderBy:$cCtrl.propertyName:$cCtrl.reverse | filter:$cCtrl.search")
               th(scope='row') {{ item.id }}
-              td(data-title='Centro de Red :') {{ item.nombre }}
-              td(data-title='Correo :') {{ item.estado }}            
+              td(data-title='Nombre :') {{ item.nombre }}
+              td(data-title='Estado :') {{ item.estado }}            
               td(data-title='Fecha de Creación :') {{ item.fechaCreacion | date:'medium' }}
+              td(data-title='Usuario :') {{ item.usuario }}            
               td(data-title='Acciones :') 
                 md-button.md-icon-button(aria-label='boton' href="#" ng-click="$cCtrl.form = item") 
                   md-icon(md-svg-src='/static/content/icons/edit.svg')
