Se cambia notificacion a mensaje y llamada

--- a/views/centros/formulario.pug
+++ b/views/centros/formulario.pug
@@ -5,7 +5,7 @@ block header
 block content
 
   br
-  div.md-whiteframe-2dp(layout="column" flex layout-margin layout-padding ng-controller="formCentro as $fCtrl")
+  div.md-whiteframe-2dp(layout="column" flex layout-margin layout-padding ng-controller="formCentroDeTrabajo as $fCtrl")
     div(layout="row" layout-align="center center" flex ng-init="$fCtrl.id = " + id + ';$fCtrl.init();')
       b.titulo Crear Centro de Trabajo
     //- md-divider
