--- a/views/notificaciones/formulario.pug
+++ b/views/notificaciones/formulario.pug
@@ -34,7 +34,7 @@ block content
       span(flex hide-sm)
     div(layout="row" layout-xs="column" layout-align="start start" flex layout-margin layout-padding)
       span(flex hide-sm)
-      md-input-container.md-block.w-100(flex)
+      //- md-input-container.md-block.w-100(flex)
         label Seleccione Icono
         md-select(ng-model='$fCtrl.form.icono')
           md-option(ng-repeat='icono in $fCtrl.iconos', ng-value='icono.id')
