--- a/views/inclusions/header.pug
+++ b/views/inclusions/header.pug
@@ -6,9 +6,9 @@ header(ng-controller="header as $cCtr")
         //- i.material-icons menu
         md-icon(md-svg-src='/static/content/icons/menu.svg')
       span(flex flex-xs)
-      a(href="/notificaciones/" title="Calidad" hide-xs)
+      a(href="/dashboard" title="Calidad" hide-xs)
         .nombre-empresa(hide-sm)
-          b Notificaciones
+          b CALIDAD
           //- span Sistema Integrado de Notificaciones
       //- span Notificaciones
       span(flex flex-xs hide-xs)
