--- a/views/layout/layout.pug
+++ b/views/layout/layout.pug
@@ -31,6 +31,8 @@
     "/static/javascripts/controllers/centros/form.js",
     
     "/static/javascripts/controllers/chequeo/defectos.js",
+    "/static/javascripts/controllers/permisos/operacion.js",
+    "/static/javascripts/controllers/permisos/operacion_rol.js",
     "/static/javascripts/controllers/chequeo/categorias.js",
     "/static/javascripts/controllers/chequeo/operaciones.js",
     "/static/javascripts/controllers/chequeo/centro/form.js",
