--- a/views/chequeo/indicadores/indicadorCentro.pug
+++ b/views/chequeo/indicadores/indicadorCentro.pug
@@ -10,14 +10,14 @@ block content
     }
     .grafica-grande {
       width: 100%;
-      height: 1500px;
+      height: 1000px;
     }
   // Resources
-  script(src='https://www.amcharts.com/lib/4/core.js')
-  script(src='https://www.amcharts.com/lib/4/charts.js')
-  script(src='https://www.amcharts.com/lib/4/themes/dataviz.js')
-  script(src="https://www.amcharts.com/lib/4/themes/spiritedaway.js")
-  script(src='https://www.amcharts.com/lib/4/themes/animated.js')
+  script(src='/static/plugins/amcharts/core.js')
+  script(src='/static/plugins/amcharts/charts.js')
+  script(src='/static/plugins/amcharts/dataviz.js')
+  script(src="/static/plugins/amcharts/spiritedaway.js")
+  script(src='/static/plugins/amcharts/animated.js')
   br
   .md-whiteframe-2dp(layout-margin layout-padding ng-controller="indicadorCentro as $iCtrl" ng-cloak) 
     h2() Indicador por centro &nbsp;
